mise en ligne avec firebase

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="un restaurant regroupe les recettes et chefs qui propose des menus">
-    <title>Restaurant Denken</title>
+    <link rel="icon" type="imag/x-icon" href="fab-icon_SD.ico">
+    <title>SD224 Restaurant Denken</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -120,7 +121,7 @@
                     <img src="images/expert1.jpg" alt="">
                 </div>
                 <div class="text">
-                    <h3>Someone Famous</h3>
+                    <h3>Aissatou Bobo</h3>
                 </div>
             </div>
             <div class="box">
@@ -128,7 +129,7 @@
                     <img src="images/expert2.jpg" alt="">
                 </div>
                 <div class="text">
-                    <h3>Someone Famous</h3>
+                    <h3>Diarye Diallo</h3>
                 </div>
             </div>
             <div class="box">
@@ -136,7 +137,7 @@
                     <img src="images/expert3.jpg" alt="">
                 </div>
                 <div class="text">
-                    <h3>Someone Famous</h3>
+                    <h3>Yassarou Diallo</h3>
                 </div>
             </div>
             <div class="box">
@@ -144,7 +145,7 @@
                     <img src="images/expert4.jpg" alt="">
                 </div>
                 <div class="text">
-                    <h3>Someone Famous</h3>
+                    <h3>Mariama Barry</h3>
                 </div>
             </div>
         </div>
@@ -162,7 +163,7 @@
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo reiciendis ullam harum aut, rem laborum, minus iste, error omnis molestias sit non. Nemo, dolor placeat sit inventore animi numquam explicabo!</p>
-                    <h3>Semeone Famous</h3>
+                    <h3>Fatoumata Diallo</h3>
                 </div>
             </div>
             <div class="box">
@@ -171,7 +172,7 @@
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo reiciendis ullam harum aut, rem laborum, minus iste, error omnis molestias sit non. Nemo, dolor placeat sit inventore animi numquam explicabo!</p>
-                    <h3>Semeone Famous</h3>
+                    <h3>Rayanatou Diallo</h3>
                 </div>
             </div>
             <div class="box">
@@ -180,7 +181,7 @@
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo reiciendis ullam harum aut, rem laborum, minus iste, error omnis molestias sit non. Nemo, dolor placeat sit inventore animi numquam explicabo!</p>
-                    <h3>Semeone Famous</h3>
+                    <h3>Karimatou Diallo</h3>
                 </div>
             </div>
         </div>
@@ -231,6 +232,17 @@
             navigation.classList.toggle('active');
         }
     </script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.2.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
+
 
 </body>
 
